# deadbeef

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml  wasm.yaml
bench/: Cargo.toml
bench/benches/: deadbeef.rs
cli/: Cargo.toml
cli/src/: chain.rs  deployment.rs  main.rs
core/: Cargo.toml
core/src/: abi.rs  address.rs  config.rs  contracts.rs  create2.rs  keccak.rs  lib.rs  safe.rs
src/: address.rs  chain.rs  create2.rs  main.rs  safe.rs
wasm/: .gitignore  Cargo.toml  Makefile  README.md  bundle.ts  index.html  package.json
wasm/example/: index.html
wasm/lib/: index.d.ts  index.js  worker.js
wasm/src/: lib.rs
wasm/test/: index.ts
